<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="year">2019</string>
    <string name="movie_title">Movie Title</string>
    <string name="genre">Comedy, Action</string>
    <string name="rating">8.7</string>
    <string name="overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi ex, aliquet vel risus sed, feugiat laoreet est. Duis dui felis, feugiat lacinia lorem nec, fringilla placerat erat. Integer nec dolor rhoncus, consectetur libero nec, laoreet turpis. Aenean at mi eu nisl interdum interdum. Aenean at nisi velit. Nunc rhoncus tempus massa, sed porttitor mauris egestas vel. Nulla facilisi. Sed fermentum dui in faucibus ornare. Aliquam ex quam, imperdiet non elementum in, porttitor non dolor. Nunc mollis massa leo, vitae bibendum enim posuere cursus. Duis at mauris euismod, convallis eros non, malesuada justo.</string>
    <string-array name="data_title">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>How to Train Your Dragon : The Hidden World</item>
        <item>Dragon Ball</item>
        <item>Glass</item>
        <item>Hunter x Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>The Spiderman Into the Spider-Verse</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_rating">
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
        <item>6.6</item>
    </string-array>
    <string-array name="data_genre">
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string-array name="data_overview">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestAn extraordinary discovery inspires two human princes and an elven assassin to team up on an epic quest to bring peace to their warring lands.yle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed.</item>
        <item>Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</item>
        <item>An extraordinary discovery inspires two human princes and an elven assassin to team up on an epic quest to bring peace to their warring lands.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the dragon balls brought her to Goku\'s home. Together, they set off to find all seven dragon balls in an adventure that would change Goku\'s life forever. See how Goku met his life long friends Bulma, Yamcha, Krillin, Master Roshi and more.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <array name="data_poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>
    <array name="data_date">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 25, 2015</item>
        <item>February 9, 2016</item>
        <item>September 14, 2018</item>
        <item>February 26, 1986</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
        <item>September 28, 2018</item>
        <item>September 28, 2018</item>
        <item>September 28, 2018</item>
        <item>September 28, 2018</item>
        <item>September 28, 2018</item>
    </array>
</resources>
